# ChangeLog for net-irc/quassel
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/quassel/ChangeLog,v 1.66 2009/10/25 22:43:50 scarabeus Exp $

  25 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org> quassel-9999.ebuild:
  Simplify oxygen useflag to be dependant on kde instead of its own.

  15 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -quassel-0.5_rc2.ebuild, quassel-0.5.0.ebuild:
  Drop old. Update linguas in 0.5.

*quassel-0.5.0 (14 Oct 2009)

  14 Oct 2009; Patrick Lauer <patrick@gentoo.org> +quassel-0.5.0.ebuild:
  Bump to 0.5.0, makes upstream happy

  12 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> quassel-0.5_rc2.ebuild:
  Keywording for ppc, bug 272760
  Tested by Christian Schmitt.

  02 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  quassel-0.5_rc2.ebuild, -files/quassel-0.5_rc1-identity.cpp.patch:
  Fix epatch issue. People dont be lazy use PATCHES array. I missed this one
  thanks to it.

*quassel-0.5_rc2 (02 Oct 2009)

  02 Oct 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -quassel-0.5_rc1.ebuild, +quassel-0.5_rc2.ebuild:
  Version bump. Drop old.

  16 Sep 2009; Pielmeier Daniel <billie@gentoo.org> quassel-9999.ebuild:
  Disable libindicate-qt until it is in the tree.

  12 Sep 2009; Víctor Ostorga <vostorga@gentoo.org>
  -files/quasselcore.conf, -files/quasselcore.init:
  Cleaning out unused files

  11 Sep 2009; Tomáš Chvátal <scarabeus@gentoo.org> quassel-9999.ebuild:
  Add fi to linguas.

  05 Sep 2009; Markus Meier <maekke@gentoo.org> quassel-0.4.3.ebuild:
  amd64/x86 stable, bug #249488

  04 Sep 2009; Pielmeier Daniel <billie@gentoo.org> metadata.xml:
  Add upstream author to metadata.

  04 Sep 2009; Pielmeier Daniel <billie@gentoo.org> -quassel-0.4.1.ebuild,
  quassel-0.5_rc1.ebuild, +files/quassel-0.5_rc1-identity.cpp.patch:
  Fix building with USE="-ssl" bug #283303. Remove old.

*quassel-0.4.3-r50 (26 Aug 2009)
