@@ -1,6 +1,6 @@
 AUX quassel.logrotate 105 RMD160 42bde4a3d8a899971037b1e2d0ddfb5b136f065e SHA1 c4ddd2cebd364c213ed4443e5bf8bd2ae3b17ad9 SHA256 00c32e857d7a4346d09ac057768565692da9cacf41ed37cc7e357b395e033a45
 AUX quasselcore-2.conf 548 RMD160 afc8ee2d5bc8449c51afd46699e7b9796ff77b1f SHA1 e9492c10864df233edda84411f7cf15e1f7f3573 SHA256 973bff9a4dac8e25b6a7b8dc8355f763c65e31f070b1fc5904f6325045ad3cb5
 AUX quasselcore-2.init 1627 RMD160 fc0885dc6a2295ad1dcb49aefc1adfd184388fb2 SHA1 2629a3019913b1c685406fc88ead655e10bed943 SHA256 318e85a896fc2672651fa270dd98bfb664c0cb20cc8ae34c18363dbef36d820b
-EBUILD quassel-9999.ebuild 3190 RMD160 67bc4d29889a8b04b7ae2a3368bacbedda54ee57 SHA1 fcef2c0778832751da4b00a13499bd0898576bd6 SHA256 f760b7211c2e6b0decdb1156ce8b751ac498c62bc72046dfb4f532bd28bcb264
-MISC ChangeLog 12339 RMD160 31e0ef910d7359e6234195944d01ab3be0ac9c98 SHA1 5be3aac30aa17a1a791abf81e6da278361a07fa6 SHA256 513c3658b7811b183eaba98d737945050a8f9f54b5c68f8772a58c3327c9a28d
-MISC metadata.xml 1690 RMD160 b77482ddd5eee3e92733c1df455f11aee3295aba SHA1 6cbff8514dfd42e9d05ed631e084e2b6fa3b46a6 SHA256 3bd4c2880d5f5846c3f69d96709a4bb108b440855994d14dba529e2deb7e615f
+EBUILD quassel-9999.ebuild 3071 RMD160 ab5072cd3e3c6bfad3b58dc01524142b53fc813a SHA1 e039ac333b6a6412b314068f3f84ab8de89b3f4a SHA256 e2c76f8fef7305542f8292046fcd161cee329848948b6dbddd9220951627545c
+MISC ChangeLog 12633 RMD160 d3f03e829e8f329fc8e4d9e0a5e911e5a69136f3 SHA1 f79387ca5b3db6a3ca5c17a4306d54c04dfed0fd SHA256 b172d4d1e355bef7545141df27fde8dcb1de1e9eedf4db4f5540e78b0dc23283
+MISC metadata.xml 1904 RMD160 0d6920637ae95ecf65ddeed89b533f7d38c2a9e7 SHA1 1184f2d819596ca938d3528b9db95c93bdd264dd SHA256 b3e24e86bcd423d041692bd6f18dbc72729444eb4a484adc6b3bab77ded76741
